--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,6 +19,7 @@ button {
   font-size: 1.2em;
   border-radius: 0.2rem;
   cursor: pointer;
+  margin: 10px;
 }
 button:hover {
   background-color: #c5c5c5;
